# xmonad.hs

./: .gitignore  .gitmodules  LICENSE  Main.hs  alternate.hs  build  cabal.project  config.cabal  stack.yaml  xmobar.hs  xmobarrc-0.hs  xmobarrc.hs  xmonad.hs
lib/: Config.hs
lib/Config/: Core.hs  Data.hs  Grids.hs  Hooks.hs  Layouts.hs  Modes.hs  Prompt.hs  Queries.hs  Static.hs  StatusBars.hs  Utils.hs  Workspaces.hs
lib/XMonad/: Config.hs
lib/XMonad/Config/: Action.hs  Data.hs  Grid.hs  Layout.hs  Modal.hs  Prompt.hs  Static.hs  Util.hs  Workspace.hs
scripts/: notify-mail-content.py  notify-mail-count.sh  notify-recompile-xmonad.sh  notify-restart-xmonad.sh  notify-screenshot-focused.sh  notify-screenshot-full.sh  notify-screenshot-selected.sh
