cabal-version:       3.0
name:                config
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:            ""
license:             BSD-3-Clause
license-file:        LICENSE
author:              Carter S. Levinson
maintainer:          carter@levinson.cc
copyright:           2023
category:            Desktop
build-type:          Simple
extra-source-files:  README.md
extra-doc-files:     CHANGELOG.md
-- extra-source-files:

executable xmonad
  main-is:             xmonad.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.17 && < 5,
                       xmonad,
                       xmonad-contrib,
                       containers,
                       text
  hs-source-dirs:      ./
  ghc-options:         -Wall
  default-language:    Haskell2010
