cabal-version:      3.0
name:               config
version:            0.1.0.0
-- synopsis:
-- description:
-- homepage:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Carter S. Levinson
maintainer:         carter@levinson.cc
copyright:          2023
category:           Desktop
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
  ghc-options:      -Wall

common language
  default-language: Haskell2010

common dependencies
  build-depends:    base ^>= 4.18.1.0,
                    xmonad,
                    xmonad-contrib

library
  import:           dependencies,
                    warnings,
                    language
  hs-source-dirs:   lib
  -- other-modules:
  -- other-extensions:
  exposed-modules:  XMonad.Config,
                    XMonad.Config.Action,
                    XMonad.Config.Data,
                    XMonad.Config.Grid,
                    XMonad.Config.Modal,
                    XMonad.Config.Prompt,
                    XMonad.Config.Layout,
                    XMonad.Config.Util,
                    XMonad.Config.Static,
                    XMonad.Config.Workspace
  build-depends:    containers,
                    text,
                    mtl,
                    X11



executable xmonad
  import:           dependencies,
                    warnings,
                    language
  hs-source-dirs:   ./
  -- other-modules:
  -- other-extensions:
  main-is:          Main.hs
  build-depends:    config,
                    containers,
                    text

test-suite test
  import:           dependencies,
                    warnings,
                    language
  hs-source-dirs:   test
  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  main-is:          Test.hs
  build-depends:    config
