cabal-version:      3.0
name:               config
version:            0.1.0.0
synopsis:           XMonad configuration
description:        Configureation and functions for the XMonad tiling WM
-- homepage:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Carter S. Levinson
maintainer:         carter@levinson.cc
copyright:          2023
category:           Desktop
build-type:         Simple
extra-doc-files:    CHANGELOG.md, README.md

common              warnings
  ghc-options:      -Wall

common              language
  default-language: Haskell2010

common              dependencies
  build-depends:    base ^>= 4.18.1.0,
                    xmonad,
                    xmonad-contrib

executable          xmonad
  import:           dependencies,
                    warnings,
                    language
  hs-source-dirs:   ./
  main-is:          Main.hs
  build-depends:    config,
                    X11,
                    containers,
                    text

library
  import:           dependencies,
                    warnings,
                    language
  hs-source-dirs:   lib
  exposed-modules:  Config,
                    Config.Core,
                    Config.Grids,
                    Config.Utils,
                    Config.Modes,
                    Config.Queries,
                    Config.Layouts,
                    Config.StatusBars,
                    Config.Workspaces
  build-depends:    containers,
                    text,
                    mtl,
                    X11
